# dashboard

./: .gitignore  db.sqlite3  package-lock.json  package.json  pyproject.toml
apps/news/: models.py  urls.py  views.py
core/: Router.py  settings.py  urls.py
home/: models.py  urls.py  views.py
staticfiles/css/: material-dashboard.css
templates/: base.html  footer.html  index.html  main.html  navi.html  template.html
templates/dashboard/: index.html
templates/include/: base.html  footer.html  header.html  navi.html
templates/news/: news_statics.html  news_tables.html
templates/pages/: billing.html  dashboard.html  icons.html  map.html  news_tables.html  notifications.html  profile.html  pyproject.toml  rtl.html  tables.html  template.html  typography.html  virtual-reality.html
