[tool.poetry]
name = "dashboard"
version = "0.1.0"
description = ""
authors = ["jaeho kang <greennuri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
django-mysql = "^4.14.0"
pymysql = "^1.1.1"
django-extensions = "^3.2.3"
mysqlclient = "^2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
